follow ide advices use jpl instead of jul clean up