@@ -64,38 +64,30 @@ public final class ReadOnlyFileSystemDriver
     private static final Set<OpenOption> WRITE_OPTIONS;
 
     static {
-        final Set<OpenOption> set = new HashSet<>();
 
-        set.add(StandardOpenOption.CREATE_NEW);
-        set.add(StandardOpenOption.CREATE);
-        set.add(StandardOpenOption.WRITE);
-        set.add(StandardOpenOption.APPEND);
-        set.add(StandardOpenOption.DELETE_ON_CLOSE);
-        set.add(StandardOpenOption.TRUNCATE_EXISTING);
-
-        WRITE_OPTIONS = Collections.unmodifiableSet(set);
+        WRITE_OPTIONS = Set.of(StandardOpenOption.CREATE_NEW, StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.APPEND, StandardOpenOption.DELETE_ON_CLOSE, StandardOpenOption.TRUNCATE_EXISTING);
     }
 
 
     private final FileSystemDriver delegate;
 
     @Nonnull
-    public static FileSystemDriver wrap(@Nonnull final FileSystemDriver driver)
+    public static FileSystemDriver wrap(@Nonnull FileSystemDriver driver)
     {
         Objects.requireNonNull(driver);
         return driver instanceof ReadOnlyFileSystemDriver ? driver
             : new ReadOnlyFileSystemDriver(driver);
     }
 
-    private ReadOnlyFileSystemDriver(final FileSystemDriver delegate)
+    private ReadOnlyFileSystemDriver(FileSystemDriver delegate)
     {
         this.delegate = Objects.requireNonNull(delegate);
     }
 
     @Nonnull
     @Override
-    public OutputStream newOutputStream(final Path path,
-        final Set<? extends OpenOption> options)
+    public OutputStream newOutputStream(Path path,
+                                        Set<? extends OpenOption> options)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
@@ -103,12 +95,12 @@ public final class ReadOnlyFileSystemDriver
 
     @Nonnull
     @Override
-    public SeekableByteChannel newByteChannel(final Path path,
-        final Set<? extends OpenOption> options,
-        final FileAttribute<?>... attrs)
+    public SeekableByteChannel newByteChannel(Path path,
+                                              Set<? extends OpenOption> options,
+                                              FileAttribute<?>... attrs)
         throws IOException
     {
-        final Set<? extends OpenOption> set = new HashSet<>(WRITE_OPTIONS);
+        Set<? extends OpenOption> set = new HashSet<>(WRITE_OPTIONS);
         set.retainAll(options);
         if (!set.isEmpty())
             throw new ReadOnlyFileSystemException();
@@ -116,38 +108,38 @@ public final class ReadOnlyFileSystemDriver
     }
 
     @Override
-    public void createDirectory(final Path dir, final FileAttribute<?>... attrs)
+    public void createDirectory(Path dir, FileAttribute<?>... attrs)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
     }
 
     @Override
-    public void delete(final Path path)
+    public void delete(Path path)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
     }
 
     @Override
-    public void copy(final Path source, final Path target,
-        final Set<CopyOption> options)
+    public void copy(Path source, Path target,
+                     Set<CopyOption> options)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
     }
 
     @Override
-    public void move(final Path source, final Path target,
-        final Set<CopyOption> options)
+    public void move(Path source, Path target,
+                     Set<CopyOption> options)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
     }
 
     @Override
-    public void setAttribute(final Path path, final String attribute,
-        final Object value, final LinkOption... options)
+    public void setAttribute(Path path, String attribute,
+                             Object value, LinkOption... options)
         throws IOException
     {
         throw new ReadOnlyFileSystemException();
@@ -176,8 +168,8 @@ public final class ReadOnlyFileSystemDriver
 
     @Override
     @Nonnull
-    public InputStream newInputStream(final Path path,
-        final Set<? extends OpenOption> options)
+    public InputStream newInputStream(Path path,
+                                      Set<? extends OpenOption> options)
         throws IOException
     {
         return delegate.newInputStream(path, options);
@@ -185,29 +177,29 @@ public final class ReadOnlyFileSystemDriver
 
     @Override
     @Nonnull
-    public DirectoryStream<Path> newDirectoryStream(final Path dir,
-        final DirectoryStream.Filter<? super Path> filter)
+    public DirectoryStream<Path> newDirectoryStream(Path dir,
+                                                    DirectoryStream.Filter<? super Path> filter)
         throws IOException
     {
         return delegate.newDirectoryStream(dir, filter);
     }
 
     @Override
-    public boolean isSameFile(final Path path, final Path path2)
+    public boolean isSameFile(Path path, Path path2)
         throws IOException
     {
         return delegate.isSameFile(path, path2);
     }
 
     @Override
-    public boolean isHidden(final Path path)
+    public boolean isHidden(Path path)
         throws IOException
     {
         return delegate.isHidden(path);
     }
 
     @Override
-    public void checkAccess(final Path path, final AccessMode... modes)
+    public void checkAccess(Path path, AccessMode... modes)
         throws IOException
     {
         delegate.checkAccess(path, modes);
@@ -215,23 +207,23 @@ public final class ReadOnlyFileSystemDriver
 
     @Override
     @Nullable
-    public <V extends FileAttributeView> V getFileAttributeView(final Path path,
-        final Class<V> type, final LinkOption... options)
+    public <V extends FileAttributeView> V getFileAttributeView(Path path,
+                                                                Class<V> type, LinkOption... options)
     {
         return delegate.getFileAttributeView(path, type, options);
     }
 
     @Override
-    public <A extends BasicFileAttributes> A readAttributes(final Path path,
-        final Class<A> type, final LinkOption... options)
+    public <A extends BasicFileAttributes> A readAttributes(Path path,
+                                                            Class<A> type, LinkOption... options)
         throws IOException
     {
         return delegate.readAttributes(path, type, options);
     }
 
     @Override
-    public Map<String, Object> readAttributes(final Path path,
-        final String attributes, final LinkOption... options)
+    public Map<String, Object> readAttributes(Path path,
+                                              String attributes, LinkOption... options)
         throws IOException
     {
         return delegate.readAttributes(path, attributes, options);
@@ -239,7 +231,7 @@ public final class ReadOnlyFileSystemDriver
 
     @Nonnull
     @Override
-    public Object getPathMetadata(final Path path)
+    public Object getPathMetadata(Path path)
         throws IOException
     {
         return delegate.getPathMetadata(path);
